--- a/src/style.css
+++ b/src/style.css
@@ -1,26 +1,45 @@
 * {
   box-sizing: border-box;
-  font-family: 'Merriweather', serif;
+  font-family: 'Sono', sans-serif;
 }
 
 body {
   margin: 0;
   padding: 0;
+  background:
+    linear-gradient(
+      to right,
+      #1e0253 0%,
+      #631447 50%,
+      #fff 50%,
+      #fff 100%
+    );
 }
 
 h1 {
-  font-size: 65px;
-  margin-left: 50px;
+  width: 90%;
+  font-size: 50px;
+  text-align: center;
+  position: relative;
+  left: 75px;
 }
 
 h2 {
-  font-size: 30px;
+  font-size: 25px;
+}
+
+.white {
+  color: #fff;
+}
+
+.black {
+  color: #fff;
 }
 
 .score-cont {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  padding: 0 115px;
+  padding: 0 80px;
   gap: 100px;
 }
 
@@ -30,43 +49,123 @@ h2 {
   align-items: center;
 }
 
-.score-header button {
+#refresh {
+  position: relative;
+  top: 5px;
   padding: 5px 15px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   background: none;
+  border: none;
   cursor: pointer;
-  border-radius: 5px;
+  -moz-transition: all 0.8s linear;
+  -webkit-transition: all 0.8s linear;
+  transition: all 0.8s linear;
+}
+
+#refresh.down {
+  -ms-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 #scores {
-  border: 3.5px solid black;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 35px;
+  padding: 20px;
+  height: 370px;
+  background-color: #fff;
+  overflow-y: auto;
 }
 
-#scores :nth-child(even) {
-  background-color: #dfdfdf;
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
 }
 
-#scores p {
-  margin: 0;
-  padding: 5px;
+/* Track */
+::-webkit-scrollbar-track {
+  background: none;
 }
 
-form {
-  width: 47%;
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #dcdcdc;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.score {
+  display: flex;
+  align-items: center;
+  padding: 10px 5px;
+  border-bottom: 1px solid rgba(204, 204, 204, 0.5);
+}
+
+.score span {
+  margin-right: 15px;
+}
+
+.score img {
+  height: 50px;
+  width: 50px;
+  margin-right: 20px;
+}
+
+.user {
+  width: 60%;
+  margin-right: 30px;
+  font-weight: 700;
+}
+
+.score-number {
+  font-weight: 700;
+  color: #10121f;
+}
+
+.form-cont {
+  text-align: center;
+  padding: 70px 100px 0;
+}
+
+.form-cont img {
+  height: 50px;
+  width: 50px;
 }
 
 input {
   width: 100%;
   margin-bottom: 25px;
-  padding: 5px;
-  border: 2px solid black;
+  border: none;
+  background-color: #ededed;
+  padding: 10px;
+  border-radius: 15px;
 }
 
 #submit-btn {
-  float: right;
-  padding: 5px 15px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  background: none;
+  padding: 8px 20px;
+  background-color: #1e0253;
+  color: #fff;
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: 15px;
+  border: none;
+  transition: 0.3s;
+}
+
+#submit-btn:hover {
+  background-color: #555;
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  padding-right: 200px;
+  padding-left: 160px;
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
 }
