--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,10 @@
+/* All */
 * {
   box-sizing: border-box;
   font-family: 'Sono', sans-serif;
 }
 
+/* Body */
 body {
   margin: 0;
   padding: 0;
@@ -36,6 +38,7 @@ h2 {
   color: #fff;
 }
 
+/* Main grid */
 .score-cont {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -43,6 +46,7 @@ h2 {
   gap: 100px;
 }
 
+/* Leaderboard Section */
 .score-header {
   display: flex;
   justify-content: space-between;
@@ -83,7 +87,7 @@ h2 {
   margin-bottom: 10px;
 }
 
-#scores {
+.leaderboard {
   box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2);
   border-radius: 35px;
   padding: 20px;
@@ -92,27 +96,25 @@ h2 {
   overflow-y: auto;
 }
 
-/* width */
+/* Scrollbar */
 ::-webkit-scrollbar {
   width: 10px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
   background: none;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
   background: #dcdcdc;
   border-radius: 10px;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
 
+/* Loading skeleton */
 .skeleton {
   opacity: 0.7;
   animation: skeleton-loading 1s linear infinite alternate;
@@ -147,6 +149,7 @@ h2 {
   border-radius: 15px;
 }
 
+/* Form Section */
 .score {
   display: flex;
   align-items: center;
@@ -158,7 +161,7 @@ h2 {
   margin-right: 15px;
 }
 
-.score img {
+.profile {
   height: 50px;
   width: 50px;
   margin-right: 20px;
@@ -204,7 +207,7 @@ h2 {
   display: none;
 }
 
-.form-cont img {
+#scorecard {
   height: 50px;
   width: 50px;
 }
@@ -232,6 +235,7 @@ input {
   background-color: #555;
 }
 
+/* Footer */
 footer {
   display: flex;
   justify-content: space-between;
