--- a/src/style.css
+++ b/src/style.css
@@ -8,22 +8,14 @@
 body {
   margin: 0;
   padding: 0;
-  background:
-    linear-gradient(
-      to right,
-      #1e0253 0%,
-      #631447 50%,
-      #fff 50%,
-      #fff 100%
-    );
 }
 
 h1 {
-  width: 90%;
   font-size: 50px;
   text-align: center;
-  position: relative;
-  left: 75px;
+  position: absolute;
+  width: 100%;
+  padding-left: 25px;
 }
 
 h2 {
@@ -34,6 +26,10 @@ h2 {
   color: #fff;
 }
 
+.copy {
+  color: #fff;
+}
+
 .black {
   color: #fff;
 }
@@ -41,9 +37,18 @@ h2 {
 /* Main grid */
 .score-cont {
   display: grid;
+  height: 100vh;
   grid-template-columns: 1fr 1fr;
-  padding: 0 80px;
+  padding: 127px 80px 0;
   gap: 100px;
+  background:
+    linear-gradient(
+      to right,
+      #1e0253 0%,
+      #631447 50%,
+      #fff 50%,
+      #fff 100%
+    );
 }
 
 /* Leaderboard Section */
@@ -245,4 +250,57 @@ footer {
   text-align: center;
   position: absolute;
   bottom: 0;
+}
+
+/* Media Queries */
+@media only screen and (max-width: 768px) {
+  .score-cont {
+    height: 100%;
+    grid-template-columns: 100%;
+    grid-template-rows: 500px 380px;
+    padding: 100px 40px 0;
+    gap: 100px;
+    background:
+      linear-gradient(
+        to bottom,
+        #1e0253 0%,
+        #631447 55%,
+        #fff 55%,
+        #fff 100%
+      );
+  }
+
+  h1 {
+    font-size: 38px;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    padding-left: 0;
+    color: #fff;
+  }
+
+  .form-cont {
+    padding: 0 10px 0;
+    margin-top: 0;
+  }
+
+  footer {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    padding-right: 0;
+    padding-left: 0;
+    width: 95%;
+    text-align: center;
+    position: static;
+  }
+
+  footer p {
+    margin-top: 5px;
+  }
+
+  .copy {
+    color: #000;
+  }
 }
